Bug 513354 - Destroy the baseWindow on tab destruction, r=bs